--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
 		<groupId>javax.enterprise</groupId>
 		<artifactId>cdi-api</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>com.h2database</groupId>
+		<artifactId>h2</artifactId>
+	</dependency>
 </dependencies>
 
 <build>
