--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=teste
 spring.datasource.password=teste
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+jsf.primefaces.theme=bootstrap
