feat: adding in memory authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.username=teste
 spring.datasource.password=teste
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 jsf.primefaces.theme=bootstrap
+logging.level.org.springframework.security=DEBUG
